Added social media contact links
This is in place of the "say hi" email link and "know more" buttons.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,28 @@ layout: default
   <img src="{{site.baseurl}}{{site.author.image}}" alt="{{site.author.name}}" class="author__img">
       <h1 class="author__job">{{ site.author.job }}</h1>
       <p class="author__bio">{{ site.author.bio }}</p>
-      <div class="author__more">
-        <a href="mailto:{{site.author.email}}?subject=Hello%20%F0%9F%91%8B" class="say-hello">Say hello</a>
-        <a href="{{site.baseurl}}/about/" class="know-more">Know More</a>
+      <div class="author__contact">
+        <ul class="contact__list list-reset">
+          <li class="contact__item">
+            <a href="https://instagram.com/dylanhand" class="contact__link" target="_blank" rel="noopener" title="Instagram"><span class="contact__icon icon-instagram"></span></a>
+          </li>
+          <li class="contact__item">
+            <a href="https://twitter.com/dylanhand" class="contact__link" target="_blank" rel="noopener" title="Twitter"><span class="contact__icon icon-twitter"></span></a>
+          </li>
+          <li class="contact__item">
+            <a href="https://youtube.com/dylanhand" class="contact__link" target="_blank" rel="noopener" title="YouTube"><span class="contact__icon icon-youtube"></span></a>
+          </li>
+          <li class="contact__item">
+            <a href="https://soundcloud.com/dylanhand" class="contact__link" target="_blank" rel="noopener" title="SoundCloud"><span class="contact__icon icon-soundcloud"></span></a>
+          </li>
+          <li class="contact__item">
+            <a href="https://www.facebook.com/dylan.hand" class="contact__link" target="_blank" rel="noopener" title="Facebook"><span class="contact__icon icon-facebook"></span></a>
+          </li>
+          <li class="contact__item">
+            <a href="https://www.linkedin.com/in/dylanhand" class="contact__link" target="_blank" rel="noopener" title="LinkedIn"><span class="contact__icon icon-linkedin2"></span></a>
+          </li>
+        </ul>
+
       </div>
     </div>
   </section>
