Testing this goes live

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <section class="author" data-aos="fade-up" data-aos-easing="ease-out-quad" data-aos-duration="700">
     <div class="author__inner">
   <img src="/assets/img/dylanrap.jpg" alt="Dylan Hand" class="author__img">
-      <h1 class="author__job">Apps & Raps</h1>
+      <h1 class="author__job">Apps & Raps WOWOWOWOWO</h1>
       <p class="author__bio">Passionate designer curating designs for new startups  and  founders  and crafts  beautiful user interfaces with love.</p>
       <div class="author__contact">
         <ul class="contact__list list-reset">
