master branch - Site generated by Rakefile

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Dylan Hand – Independent Product Designer</title>
+  <title>Dylan Hand</title>
   <meta name='description' content='Homepage of Dylan Hand.'>
 
   <link rel="canonical" href="/">
-  <link rel="alternate" type="application/rss+xml" title="Dylan Hand – Independent Product Designer" href="/feed.xml">
+  <link rel="alternate" type="application/rss+xml" title="Dylan Hand" href="/feed.xml">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700&display=swap" rel="stylesheet">
@@ -102,7 +102,7 @@
   <section class="author" data-aos="fade-up" data-aos-easing="ease-out-quad" data-aos-duration="700">
     <div class="author__inner">
   <img src="/assets/img/dylanrap.jpg" alt="Dylan Hand" class="author__img">
-      <h1 class="author__job">Apps & Raps WOWOWOWOWO</h1>
+      <h1 class="author__job">Apps & Raps</h1>
       <p class="author__bio">Passionate designer curating designs for new startups  and  founders  and crafts  beautiful user interfaces with love.</p>
       <div class="author__contact">
         <ul class="contact__list list-reset">
