--- a/index.html
+++ b/index.html
@@ -6,32 +6,10 @@ layout: default
   <!-- begin author -->
   <section class="author" data-aos="fade-up" data-aos-easing="ease-out-quad" data-aos-duration="700">
     <div class="author__inner">
-  <img src="{{site.baseurl}}{{site.author.image}}" alt="{{site.author.name}}" class="author__img">
-      <h1 class="author__job">{{ site.author.job }}</h1>
-      <p class="author__bio">{{ site.author.bio }}</p>
-      <div class="author__contact">
-        <ul class="contact__list list-reset">
-          <li class="contact__item">
-            <a href="https://instagram.com/dylanhand" class="contact__link" target="_blank" rel="noopener" title="Instagram"><span class="contact__icon icon-instagram"></span></a>
-          </li>
-          <li class="contact__item">
-            <a href="https://twitter.com/dylanhand" class="contact__link" target="_blank" rel="noopener" title="Twitter"><span class="contact__icon icon-twitter"></span></a>
-          </li>
-          <li class="contact__item">
-            <a href="https://youtube.com/dylanhand" class="contact__link" target="_blank" rel="noopener" title="YouTube"><span class="contact__icon icon-youtube"></span></a>
-          </li>
-          <li class="contact__item">
-            <a href="https://soundcloud.com/dylanhand" class="contact__link" target="_blank" rel="noopener" title="SoundCloud"><span class="contact__icon icon-soundcloud"></span></a>
-          </li>
-          <li class="contact__item">
-            <a href="https://www.facebook.com/dylan.hand" class="contact__link" target="_blank" rel="noopener" title="Facebook"><span class="contact__icon icon-facebook"></span></a>
-          </li>
-          <li class="contact__item">
-            <a href="https://www.linkedin.com/in/dylanhand" class="contact__link" target="_blank" rel="noopener" title="LinkedIn"><span class="contact__icon icon-linkedin2"></span></a>
-          </li>
-        </ul>
-
-      </div>
+      <img src="{{site.baseurl}}{{site.author.image}}" alt="{{site.author.name}}" class="author__img">
+      <h1 class="author__job">{{ site.title }}</h1>
+      <p class="author__bio">{{ site.subtitle }}</p>
+      {% include social-icons.html %}
     </div>
   </section>
   <!-- end author -->
