--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@ layout: default
   <section class="author" data-aos="fade-up" data-aos-easing="ease-out-quad" data-aos-duration="700">
     <div class="author__inner">
       <img src="{{site.baseurl}}{{site.author.image}}" alt="{{site.author.name}}" class="author__img">
-      <h1 class="author__job">{{ site.title }}</h1>
-      <p class="author__bio">{{ site.subtitle }}</p>
-      {% include social-icons.html %}
+      <p class="author__bio">{{ site.author.bio }}</p>
     </div>
   </section>
   <!-- end author -->
