--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
   <title>About</title>
   <meta name='description' content='Homepage of Dylan Hand.'>
 
-  <link rel="canonical" href="/about/">
+  <link rel="canonical" href="http://dylanhand.com/about/">
   <link rel="alternate" type="application/rss+xml" title="Dylan Hand" href="/feed.xml">
 
   <!-- Icons -->
