--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Dylan Hand</title>
   <meta name='description' content='Homepage of Dylan Hand.'>
 
-  <link rel="canonical" href="/">
+  <link rel="canonical" href="http://dylanhand.com/">
   <link rel="alternate" type="application/rss+xml" title="Dylan Hand" href="/feed.xml">
 
   <!-- Icons -->
