--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
 
 <body>
-
   
 
+  <div class="super-container">
   <div class="container-full">
   <!-- begin header -->
   <header class="header">
@@ -367,6 +367,7 @@
   <script src="/assets/js/vendors/jquery.fitvids.js"></script>
   <script src="/assets/js/common.js"></script>
   <!-- end js -->
+  </div>
 </body>
 
 </html>
