--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
     <div class="article" data-aos="fade-up" data-aos-easing="ease-out-quad" data-aos-duration="800">
       {% if post.image %}
       <div class="article__image-box">
-        <a href="{{post.url | prepend: site.baseurl}}" class="article__image" style="background-image: url({{site.baseurl}}{{post.image}})"></a>
+        <a href="{{post.url | prepend: site.baseurl}}" class="article__image" style="background-image: url({{site.baseurl}}{{site.images-path}}{{post.image}})"></a>
       </div>
       {% endif %}
       <div class="article__content">
