--- a/about/index.html
+++ b/about/index.html
@@ -156,7 +156,7 @@
     <div class="page__head" data-aos="fade-up" data-aos-easing="ease-out-quad" data-aos-duration="700">
       <h1 class="page__title">About</h1>
       
-      <div class="page-image" style="background-image: url(/assets/img/dylanrap.jpg)"></div>
+      <div class="page-image" style="background-image: url(/assets/img//assets/img/dylanrap.jpg)"></div>
       
     </div>
 
