master branch - Bio and footer

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <section class="author" data-aos="fade-up" data-aos-easing="ease-out-quad" data-aos-duration="700">
     <div class="author__inner">
       <img src="/assets/img/dylanrap.jpg" alt="Dylan Hand" class="author__img">
-      <p class="author__bio">Software engineer and rapper from Oregon living in Gothenburg.</p>
+      <p class="author__bio">Rapper from Oregon living in Gothenburg.</p>
     </div>
   </section>
   <!-- end author -->
@@ -432,7 +432,10 @@ Big thanks to Photo...
 
       </div>
       <div class="copyright">
-        &#169; 2019-2020 Dylan Hand
+        &#169; 2019-2020 Dylan Hand 
+        <br>
+        <br>
+        Coded by &#128400;
       </div>
       <div class="footer__links">
         <a href=/privacy/ >Privacy Policy</a>
