master branch - New profile pic

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <!-- begin author -->
   <section class="author" data-aos="fade-up" data-aos-easing="ease-out-quad" data-aos-duration="700">
     <div class="author__inner">
-      <img src="/assets/img/dylanrap.jpg" alt="Dylan Hand" class="author__img">
+      <img src="/assets/img/profile-pic.jpg" alt="Dylan Hand" class="author__img">
       <p class="author__bio">Rapper from Oregon living in Gothenburg.</p>
     </div>
   </section>
