source branch - Attempt to add social liks to bio

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ layout: default
     <div class="author__inner">
       <img src="{{site.baseurl}}{{site.author.image}}" alt="{{site.author.name}}" class="author__img">
       <p class="author__bio">{{ site.author.bio }}</p>
+      <div class="contact">
+	      {% include social-icons.html %}
+      </div>
     </div>
   </section>
   <!-- end author -->
