--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
   <section class="author" data-aos="fade-up" data-aos-easing="ease-out-quad" data-aos-duration="700">
     <div class="author__inner">
       <img src="{{site.baseurl}}{{site.author.image}}" alt="{{site.author.name}}" class="author__img">
-      <div>
+      <div class="author__contact__profile">
         {% include social-icons.html %}
       </div>
       <p class="author__bio">{{ site.author.bio }}</p>
