master branch - Remove fly high link

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 </div>
 
       </div>
-      <p class="author__bio">Pre-save the new single "Fly High" <a href="https://distrokid.com/hyperfollow/dylanhand/fly-high">here.</a></p>
+      <p class="author__bio">New single coming May 2021.</p>
     </div>
   </section>
   <!-- end author -->
