--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
   <title>Page not found</title>
   <meta name='description' content='Homepage of Dylan Hand.'>
 
-  <link rel="canonical" href="http://dylanhand.com/404.html">
+  <link rel="canonical" href="http://localhost:4000/404.html">
   <link rel="alternate" type="application/rss+xml" title="Dylan Hand" href="/feed.xml">
 
   <!-- Main Stylesheet -->
