--- a/fly-high.html
+++ b/fly-high.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
   <meta charset="utf-8">
   <title>Redirecting&hellip;</title>
-  <link rel="canonical" href="https://distrokid.com/hyperfollow/dylanhand/fly-high">
-  <script>location="https://distrokid.com/hyperfollow/dylanhand/fly-high"</script>
-  <meta http-equiv="refresh" content="0; url=https://distrokid.com/hyperfollow/dylanhand/fly-high">
+  <link rel="canonical" href="https://songwhip.com/dylanhand/fly-high">
+  <script>location="https://songwhip.com/dylanhand/fly-high"</script>
+  <meta http-equiv="refresh" content="0; url=https://songwhip.com/dylanhand/fly-high">
   <meta name="robots" content="noindex">
   <h1>Redirecting&hellip;</h1>
-  <a href="https://distrokid.com/hyperfollow/dylanhand/fly-high">Click here if you are not redirected.</a>
+  <a href="https://songwhip.com/dylanhand/fly-high">Click here if you are not redirected.</a>
 </html>
